Solved bug with looping obstacles, temporarily